--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
     "browser": true
   },
   "rules": {
-    "semi": ["error", "never"],
+    "semi": [2, "never"],
     "comma-dangle": [2, "always-multiline"],
     "max-len": 0,
     "no-shadow": 0,
